--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,11 +10,11 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
+    <div class="container h-20 row bg-white pt-lg-2 d-home d-lg-flex">
+        <div class="row h-20 col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
             <div class="col-7 col-md-6 my-auto">
                 <h1 class="display-4 logo-font text-black">
-                    Welcome to the gallery of our new recipe
+                    Welcome to our gallery of cakes
                 </h1>
                 <div class="my-5">
                     <h4>
