--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,9 +5,11 @@
                 All Products
             </a>
             <div classs="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="#" class="dropdown-item">Cheese Cake</a>
-                <a href="#" class="dropdown-item">Carrot Cake</a>
-                <a href="#" class="dropdown-item">Chocolate Cake</a>
+                <a href="#" class="dropdown-item">By Price</a>
+                <a href="#" class="dropdown-item">By Rating</a>
+                <a href="#" class="dropdown-item">By Category</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
+                
             </div>
         </li>
 
