--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,9 +18,10 @@
                 Cheese Cake
             </a>
             <div classs="dropdown-menu border-0" aria-labelledby="cheese-cake-link">
-                <a href="" class="dropdown-item">Baked Cheese Cake</a>
-                <a href="" class="dropdown-item">Mousse Cheese Cake</a>
-                <a href="" class="dropdown-item">Set Cheese Cake</a>
+                <a href="{% url 'products' %}?q=Cheese Raspberry Cake" class="dropdown-item">Cheese Raspberry Cake</a>
+                <a href="{% url 'products' %}?q=Cheese Patry Cake" class="dropdown-item">Cheese Patry Cake</a>
+                <a href="{% url 'products' %}?q=Cake Lemon Cheesecake" class="dropdown-item">Cake Lemon Cheesecake</a>
+                <a href="{% url 'products' %}?q=Cake Berries Cheesecake" class="dropdown-item">Cake Berries Cheesecake</a>
             </div>
         </li>
 
@@ -29,9 +30,10 @@
                 Carrot Cake
             </a>
             <div classs="dropdown-menu border-0" aria-labelledby="carrot-cake-link">
-                <a href="" class="dropdown-item">Brazillian Carrot Cake</a>
-                <a href="" class="dropdown-item">Carrot Cake Cupcakes</a>
-                <a href="" class="dropdown-item">Carrot loaf Cake</a>
+                <a href="{% url 'products' %}?q=Carrot Muffin Cake" class="dropdown-item">Carrot Muffin Cake</a>
+                <a href="{% url 'products' %}?q=Carrot Cup Cake" class="dropdown-item">Carrot Cup Cake</a>
+                <a href="{% url 'products' %}?q=Pure Carrot Cake" class="dropdown-item">Pure Carrot Cake</a>
+                <a href="{% url 'products' %}?q=Carrot Food Cake" class="dropdown-item">Carrot Food Cake</a>
             </div>
         </li>
 
@@ -40,9 +42,33 @@
                 Chocolate Cake
             </a>
             <div classs="dropdown-menu border-0" aria-labelledby="chocolate-cake-link">
-                <a href="" class="dropdown-item">Chocolate Fudge Cake</a>
-                <a href="" class="dropdown-item">Chocolate Mug Cake</a>
-                <a href="" class="dropdown-item">Chocolate lava Cake</a>
+                <a href="{% url 'products' %}?q=Chocolate Trufle Cake" class="dropdown-item">Chocolate Trufle Cake</a>
+                <a href="{% url 'products' %}?q=Chocolate Berry Cake" class="dropdown-item">Chocolate Berry Cake</a>
+                <a href="{% url 'products' %}?q=Pure Chocolate Cake" class="dropdown-item">Pure Chocolate Cake</a>
+                <a href="{% url 'products' %}?q=Chocolate Syrup Cake" class="dropdown-item">Chocolate Syrup Cake</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="Red-Velvet-cake-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Red Velvet Cake
+            </a>
+            <div classs="dropdown-menu border-0" aria-labelledby="Red-Velvet-cake-link">
+                <a href="{% url 'products' %}?q=Berry Red Velvet Cake" class="dropdown-item">Berry Red Velvet Cake</a>
+                <a href="{% url 'products' %}?q=Creamy Red Velvet Cake" class="dropdown-item">Creamy Red Velvet Cake</a>
+                <a href="{% url 'products' %}?q=Red Velvet Yummy Cake" class="dropdown-item">Red Velvet Yummy Cake</a>
+                <a href="{% url 'products' %}?q=Red Velvet Dessert Cake" class="dropdown-item">Red Velvet Dessert Cake</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="butter-cake-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Butter Cake
+            </a>
+            <div classs="dropdown-menu border-0" aria-labelledby="butter-cake-link">
+                <a href="{% url 'products' %}?q=Butter Milky Cake" class="dropdown-item">Butter Milky Cake</a>
+                <a href="{% url 'products' %}?q=Butter Strawberry Cake" class="dropdown-item">Butter Strawberry Cake</a>
+                <a href="{% url 'products' %}?q=Breakfast Butter Cake" class="dropdown-item">Breakfast Butter Cake</a>
             </div>
         </li>
     </ul>
