--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -21,6 +21,7 @@
                     </a>
                 {% endfor %}
                 <hr class="w-50 mb-1">
+                
             </div>
         </div>
         <div class="row">
@@ -28,7 +29,7 @@
                 <div class="row mt-1 mb-2">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-cotent-md-end">
                         <div class="sort-select-wrapper w-50">
-                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != None_None %}info{% else %}black{% endif %}">
+                            <select id="sort-selector" class="custom-select custom-select-sm rounded-0 border {% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                                 <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by ...</option>
                                 <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
                                 <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
@@ -38,7 +39,6 @@
                                 <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
                                 <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
                                 <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                                
                             </select>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                                             {% if product.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted" href="{% url 'products' %}?category={{product.category.name}}">
-                                                    <i class="fas fa-tag mr-1"></i>{{product.category.friendly_name}}
+                                                    <i class="fas fa-tag mr-1"></i>{{product.category.name}}
                                                 </a>
                                             </p>
                                             {% endif %}
@@ -117,4 +117,55 @@
             </div>
         </div>
     </div>
+    <div class="btn-button shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100">
+
+        </a>
+    </div>
+    <div class="btn-button shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        </a>
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+    <script type="text/javascript">
+        $('.btt-link').click(function(e) {
+            window.scrollTo(0,0)
+        })
+
+    </script>
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var selectedVal = selector.val();
+            var currentUrl = new URL(window.location);
+
+            
+
+            if (selectedVal != "reset") {
+                var sort = selectedVal.split('_')[0];
+                var direction = selectedVal.split('_')[1];
+                   
+                    
+                currentUrl.searchParams.set('sort', sort);
+                currentUrl.searchParams.set('direction', direction);
+
+                window.location.replace(currentUrl);
+
+            } else {
+                currentUrl.searchParams.delete('sort');
+                currentUrl.searchParams.delete('direction');
+                window.location.replace(currentUrl);
+            }
+
+            
+        })
+    </script>
 {% endblock %}
