--- a/static/css/base.css
+++ b/static/css/base.css
@@ -74,6 +74,20 @@ a.category-badge > span.badge:hover {
     background: #44484c;
     color: #fff;
 }
+
+.bttn-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    
+    
+}
+
+.bttn-link {
+    cursor: pointer;
+}
 /*...........................Media queries*/
 /* larger container on xl screens */
 @media (min-width: 1200px){
