--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="overlay"></div>
-    <div class="container mb-2">
+    <div class="container mb-2 my-auto">
         <div class="row">
             <div class="col">
                 <hr>
@@ -21,12 +21,18 @@
         </div>
 
         <div class="row">
-            <div class="col">
+            <div class="col ">
                 {% if bag_items %}
                     <div class="table-responsive rounded"></div>
                 {% else %}
-                    <p class="lead mb-5"> Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg"></a>
+                    <p class="lead mb-5 "> Your bag is empty.</p>
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                        <span class="icon">
+                            <i class="fas fa-chevron-left"></i>
+                        </span>
+                        
+                        <span class="text-uppercase">Keep Shopping</span>
+                    </a>
                 {% endif %}
             </div>
         </div>
