--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <form method="GET" action="{% url 'products' %}">
             <div class="input-group w-100">
-              <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+              <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="you're welcome to search what you want">
               <div class="input-group-append">
                 <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                   <span class="icon">
@@ -62,7 +62,7 @@
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
             <li class="list-inline-item dropdown">
-              <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="text-black nav-link" href="" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center">
                   <div><i class="fas fa-user fa-lg"></i></div>
                   <p class="my-0">My account</p>
@@ -109,7 +109,7 @@
       </div>
       <div id="delivery-banner" class="row text-center">
         <div class="col bg-black text-white">
-          <h4 class="logo-font my-0">Free delivery on orders over ${{free_delivery_threshold}}</h4>
+          <h4 class="logo-font my-0">Free delivery on orders over $5{{free_delivery_threshold}}</h4>
         </div>
       </div>
     </header>
