--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,3 +1,4 @@
+<!-- Search Dropdown -->
 <li class="list-inline-item">
     <a class="text-black nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
@@ -20,6 +21,8 @@
         </form>
     </div>
 </li>
+
+<!-- User Options Dropdown -->
 <li class="list-inline-item dropdown">
     <a class="text-black nav-link d-block d-lg-none" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
@@ -27,32 +30,32 @@
             <p class="my-0">My Account</p>
         </div>
     </a>
-    <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
+    <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="user-options">
         {% if request.user.is_authenticated %}
             {% if request.user.is_superuser %}
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
             {% endif %}
             <a href="" class="dropdown-item">My Profile</a>
-            <a href="{% url 'account_logout' %}" class="dropdown-item">dropdown-item</a>
+            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
         {% else %}
             <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
             <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
         {% endif %}
     </div>
-    <li class="list-inline-item">
-        <a class="{% if grand_total %} text-primary font-weight-bold{% else %} text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
-            <div class="text-center">
-                <div><i class="fas fa-shopping-bag"></i></div>
-                <p class="my-0">
-                    {% if grand_total %}
-                        ${{grand_total|floatformat:2}}
-                    {% else %}
-                        $0.00
-                    {% endif %}
-                </p>
-            </div>
+</li>
 
-        </a>
-
-    </li>
+<!-- Shopping Bag Icon -->
+<li class="list-inline-item">
+    <a class="{% if grand_total %} text-primary font-weight-bold{% else %} text-black{% endif %} nav-link d-block d-lg-none" href="{% url 'view_bag' %}">
+        <div class="text-center">
+            <div><i class="fas fa-shopping-bag"></i></div>
+            <p class="my-0">
+                {% if grand_total %}
+                    ${{ grand_total|floatformat:2 }}
+                {% else %}
+                    $0.00
+                {% endif %}
+            </p>
+        </div>
+    </a>
 </li>
