--- a/static/css/base.css
+++ b/static/css/base.css
@@ -89,6 +89,21 @@ a.category-badge > span.badge:hover {
 .bttn-link {
     cursor: pointer;
 }
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
 /* General Body Styling */
 body {
     font-family: Geist Mono;
