--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -28,30 +28,41 @@
                             <thead class="text-black">
                                 <tr>
                                     <th scope="col">Product Info</th>
-                                    <th scope="col"></th>
                                     <th scope="col">Price</th>
                                     <th scope="col">Qty</th>
                                     <th scope="col">Subtotal</th>
+                                    <th scope="col">Actions</th>  <!-- Add a column for actions -->
                                 </tr>
                             </thead>
 
                             {% for item in bag_items %}
                                 <tr>
                                     <td class="p-3 w-25">
-                                        <img class="img-fluid rounded" src="{{item.product.image.url}}">
+                                        <img class="img-fluid rounded" src="{{ item.product.image.url }}">
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0"><strong>{{ item.product.name}}</strong></p>
-                                        <p class="my-0 small text-muted">category: {{item.product.name|upper}}</p>
+                                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                        <p class="my-0 small text-muted">Category: {{ item.product.name|upper }}</p>
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">${{ item.product.price}}</p>    
+                                        <p class="my-0">${{ item.product.price|floatformat:2 * item.quantity }}</p>
                                     </td>
+                            
                                     <td class="py-3 w-25">
-                                        <p class="my-0">{{ item.quantity}}</p>    
+                                        <form action="{% url 'adjust_bag' item.product.id %}" method="post">
+                                            {% csrf_token %}
+                                            <input type="number" name="quantity" value="{{ item.quantity }}" min="1" class="form-control">
+                                            <button type="submit" class="btn btn-outline-black btn-sm mt-2">Update</button>
+                                        </form>
+                                        
                                     </td>
+                            
                                     <td class="py-3">
-                                        <p class="my-0">${{ item.product.price}}</p>    
+                                        <form action="{% url 'remove_from_bag' item.product.id %}" method="post">
+                                            {% csrf_token %}
+                                            <button type="submit" class="btn btn-danger btn-sm mt-2">Remove</button>
+                                        </form>
+                                        
                                     </td>
                                 </tr>
                             {% endfor %}
