--- a/templates/includes/toasts/toasts_success.html
+++ b/templates/includes/toasts/toasts_success.html
@@ -8,6 +8,18 @@
         </button>
     </div>
     <div class="toast-body bg-white">
-        {{message}}
+        <div class="row">
+            <div class="col">
+                {{ message }}
+                <hr class="mt-1 mb-3">
+            </div>
+        </div>
+        {% if grand_total %}
+            <p class="logo-font bg-white text-black py-1">Your Bag {{{ product_count}}}</p>
+            {% for item in bag_items % }
+                <div class="row">
+                    
+                </div>
+        {% endif %}
     </div>
 </div>
