--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -64,7 +64,9 @@
                                         </form>
                                         <form action="{% url 'remove_from_bag' item.product.id %}" method="post">
                                             {% csrf_token %}
-                                            <button type="submit" class="btn btn-danger btn-sm mt-2">Remove</button>
+                                            <button type="submit" class="btn btn-danger btn-sm mt-2 remove-item" id="remove_{{ item.product.id }}" data-product_size="{{ item.product.size }}">
+                                                Remove
+                                            </button>
                                         </form>
                                     </td>
                                 </tr>
@@ -124,20 +126,28 @@
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
         form.submit();
-    })
+    });
 
     // Remove item and reload on click
     $('.remove-item').click(function(e) {
+        e.preventDefault();  // Prevent the default form submission
         var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('product_size');
+        var itemId = $(this).attr('id').split('remove_')[1]; // Get item ID from the button's ID
+        var size = $(this).data('product_size'); // Get product size if necessary
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
+        var data = {
+            'csrfmiddlewaretoken': csrfToken, 
+            'product_size': size
+        };
 
         $.post(url, data)
          .done(function() {
-             location.reload();
+             location.reload(); // Reload the page after successful deletion
+         })
+         .fail(function() {
+             alert("Failed to remove item.");
          });
-    })
+    });
 </script>
+
 {% endblock %}
